Use FRONTEND_URL env variable to set CORS rules